--- a/v1/style.css
+++ b/v1/style.css
@@ -37,6 +37,12 @@ body {
 	scrollbar-width: none;
 }
 
+#heading-img{
+	position: sticky;
+	top: 10px;
+	left: 30%;
+}
+
 .mBlog {
 	position: relative;
 	scroll-snap-align: start;
